--- a/packages/sites/src/pages/index/index.scss
+++ b/packages/sites/src/pages/index/index.scss
@@ -1,8 +1,4 @@
-#cavWrapper {
-  border: 1px solid red;
-
-  canvas {
-    width: 100%;
-    height: 100%;
-  }
+.ec-chart{
+  width: 100%;
+  height: 100%;
 }
